Fixed alignment in wrappers

--- a/src/scripts/modules/media/body/content-baked.less
+++ b/src/scripts/modules/media/body/content-baked.less
@@ -204,8 +204,8 @@ h1.example-title .text {
   padding: 0;
 }
 
-.os-problem-container,
-.os-solution-container {
+:not(.ui-body) > .os-problem-container,
+:not(.ui-body) > .os-solution-container {
   display: inline;
   > :first-child {
     display: inline;
